# scriptorium

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  FLY_PLAN.md  README.md  TODO.md  default.nix  deny.toml  flake.nix  fly.toml  justfile  package.nix
.cargo/: audit.toml  mutants.toml
.config/: nextest.toml
.github/workflows/: ci.yml
android/: README.md
crates/bookstore-app/: Cargo.toml
crates/bookstore-app/src/: lib.rs  seed.rs
crates/bookstore-cart-wasm/: Cargo.toml
crates/bookstore-cart-wasm/src/: admin.rs  cart.rs  checkout.rs  components.rs  intake.rs  lib.rs  pos.rs
crates/bookstore-cli/: Cargo.toml
crates/bookstore-cli/src/: main.rs
crates/bookstore-core/: Cargo.toml
crates/bookstore-core/src/: lib.rs
crates/bookstore-data/: Cargo.toml
crates/bookstore-data/migrations/postgres/: 0001_initial.sql  0002_order_line_snapshots.sql
crates/bookstore-data/migrations/sqlite/: 0001_initial.sql  0002_order_line_snapshots.sql
crates/bookstore-data/src/: lib.rs
crates/bookstore-data/tests/: postgres_integration.rs
crates/bookstore-mobile/: Cargo.toml
crates/bookstore-mobile/src/: lib.rs
crates/bookstore-web/: Cargo.toml
crates/bookstore-web/src/: admin_intake_ui.rs  admin_pages.rs  admin_ui.rs  catalog_ui.rs  i18n.rs  isbn_lookup.rs  lib.rs  main.rs  object_storage.rs  storefront_ui.rs  ui.rs  web_support.rs
crates/bookstore-web/src/controllers/: admin_api.rs  admin_pages.rs  health.rs  media.rs  mod.rs  pos.rs  storefront.rs  webhook.rs
crates/bookstore-web/src/models/: admin.rs  common.rs  mod.rs  pos.rs  storefront.rs  webhook.rs
crates/bookstore-web/src/views/: admin.rs  catalog.rs  mod.rs  pos.rs
crates/bookstore-web/templates/admin/: dashboard.html  gateway_layout.html  intake.html  layout.html  login.html  orders.html
crates/bookstore-web/templates/catalog/: cart.html  catalog.html  checkout.html  layout.html  product_detail.html  product_not_found.html
crates/bookstore-web/templates/pos/: shell.html
crates/bookstore-web/tests/: README.md  bdd.rs
crates/bookstore-web/tests/browser/: e2e.rs
crates/bookstore-web/tests/features/admin/: admin_dashboard_shell.feature  admin_mobile_intake_shell.feature  admin_orders_iou.feature  scenario_e_inventory_add.feature  scenario_f_profit_visibility.feature
crates/bookstore-web/tests/features/foundation/: locale_context.feature  tenant_context.feature
crates/bookstore-web/tests/features/hardening/: admin_authz_boundaries.feature
crates/bookstore-web/tests/features/pos/: mobile_viewport_smoke.feature  scenario_d_iou.feature
crates/bookstore-web/tests/features/service/admin/: admin_auth_products_reports.feature  admin_category_vendor_lists.feature  admin_dashboard_shell.feature  admin_mobile_intake_shell.feature  admin_orders_shell.feature  admin_report_date_range.feature  admin_tenant_isolation_api.feature  scenario_g_multi_bookshop_isolation.feature
crates/bookstore-web/tests/features/service/domain/: money_gst.feature  profit_reporting.feature  tenant_isolation.feature
crates/bookstore-web/tests/features/service/foundation/: health.feature  i18n_lookup.feature
crates/bookstore-web/tests/features/service/hardening/: admin_csrf.feature
crates/bookstore-web/tests/features/service/pos/: checkout_atomicity.feature  discounts.feature  error_handling.feature  mobile_viewport_smoke.feature  scenario_a_sunday_rush.feature  scenario_b_quick_items.feature  scenario_c_cash_roundup.feature
crates/bookstore-web/tests/features/service/storefront/: catalog_api.feature  catalog_browse.feature  checkout.feature  checkout_shell.feature  detail_and_cart.feature
crates/bookstore-web/tests/features/storefront/: catalog_browse.feature  checkout_shell.feature  detail_and_cart.feature  search.feature
crates/bookstore-web/tests/service/: bdd.rs  isbn_lookup.rs  load.rs  readiness.rs  storage.rs
db/: seed.toml
docs/: DEPLOY_PLAN.md  FLY_SETUP_PLAN.md  PLAN.md  STAGING_PLAN.md  STAGING_TODO.md  deployment.md  local-dev-services.md  release-checklist.md  staging-deploy.md
docs/adr/: 0001-htmx-and-pos-island.md
docs/migrations/: postgres-parity-checklist.md
docs/runbooks/: sqlite-backup-restore.md
docs/specs/: architecture.md  brief.md  design-palette.jsx  design-ux-review.md  design-ux.jsx
ios/: README.md
static/wasm/: bookstore-cart-wasm.js  bookstore-cart-wasm_bg.wasm
