[workspace]
members = [
  "crates/bookstore-core",
  "crates/bookstore-app",
  "crates/bookstore-data",
  "crates/bookstore-cli",
  "crates/bookstore-web",
  "crates/bookstore-mobile",
  "crates/bookstore-cart-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.4.5"
authors = ["Scriptorium Team"]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
cucumber = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quickcheck = "1"
quickcheck_macros = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate"] }
