[package]
name = "bookstore-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
bookstore-domain = { path = "../bookstore-core", version = "0.4.4" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
