[package]
name = "bookstore-cart-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-storage = "0.3"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "HtmlTextAreaElement",
    "HtmlVideoElement",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Url",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
