[package]
name = "bookstore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bookstore-app = { path = "../bookstore-app", version = "0.4.3" }
bookstore-domain = { path = "../bookstore-core", version = "0.4.3" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
