[package]
name = "bookstore-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
bookstore-app = { path = "../bookstore-app", version = "0.2.0" }
bookstore-domain = { path = "../bookstore-core", version = "0.2.0" }
sqlx.workspace = true
tokio.workspace = true
