[package]
name = "bookstore-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
bookstore-app = { path = "../bookstore-app", version = "0.4.4" }
bookstore-domain = { path = "../bookstore-core", version = "0.4.4" }
serde_json.workspace = true
