[package]
name = "bookstore-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bookstore-app = { path = "../bookstore-app", version = "0.4.1" }
bookstore-data = { path = "../bookstore-data", version = "0.4.1" }
bookstore-domain = { path = "../bookstore-core", version = "0.4.1" }
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
chromiumoxide = "0.9.1"
cucumber.workspace = true
futures-util = "0.3"
reqwest.workspace = true
serial_test = "3"
serde_json.workspace = true

[[test]]
name = "service_bdd"
path = "tests/service/bdd.rs"

[[test]]
name = "browser_e2e"
path = "tests/browser/e2e.rs"
