[package]
name = "bookstore-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
aws-config = "1.8.11"
aws-credential-types = "1.2.10"
aws-sdk-s3 = "1.115.0"
bookstore-app = { path = "../bookstore-app", version = "0.4.2" }
bookstore-data = { path = "../bookstore-data", version = "0.4.2" }
bookstore-domain = { path = "../bookstore-core", version = "0.4.2" }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
chromiumoxide = "0.9.1"
cucumber.workspace = true
futures-util = "0.3"
reqwest.workspace = true
serial_test = "3"
serde_json.workspace = true
tempfile = "3"

[[test]]
name = "service_bdd"
path = "tests/service/bdd.rs"

[[test]]
name = "browser_e2e"
path = "tests/browser/e2e.rs"

[[test]]
name = "service_load"
path = "tests/service/load.rs"

[[test]]
name = "service_storage"
path = "tests/service/storage.rs"

[[test]]
name = "service_isbn_lookup"
path = "tests/service/isbn_lookup.rs"
